[package]
name = "kernel"
version = "0.1.0"
authors = ["Yuuki Rika"]
edition = "2021"

# https://doc.rust-lang.org/cargo/reference/manifest.html

# The profile used for `cargo build`.
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# The profile used for `cargo build --release`.
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
